restructura de carpetas y recursos (img y css)

--- a/Pinterest_P/Pinterest_Clon.html
+++ b/Pinterest_P/Pinterest_Clon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest</title>
-    <link rel="stylesheet" href="Pinterest_style.css">
+    <link rel="stylesheet" href="assets/css/Pinterest_style.css">
 </head>
 <body>
 
@@ -27,16 +27,16 @@
             </div>
             <div class="icons">
                 <div>
-                    <button><img class="NavIcon" src="IMG/Navbar/IconNotif.png" alt=""></button>
+                    <button><img class="NavIcon" src="assets/img/navbar/IconNotif.png" alt=""></button>
                 </div>
                 <div>
-                    <button><img class="NavIcon" src="IMG/Navbar/IconMesa.png" alt=""></button>
+                    <button><img class="NavIcon" src="assets/img/navbar/IconMesa.png" alt=""></button>
                 </div>
                 <div>
-                    <button><img class="NavIcon" src="IMG/Navbar/IconProfile.png" alt=""></button>
+                    <button><img class="NavIcon" src="assets/img/navbar/IconProfile.png" alt=""></button>
                 </div>
                 <div>
-                    <button><span><img class="NavIcon" src="IMG/Navbar/IconOption.png" alt=""></span></button>
+                    <button><span><img class="NavIcon" src="assets/img/navbar/IconOption.png" alt=""></span></button>
                 </div>
             </div>
             
