--- a/Pinterest_P/grid.html
+++ b/Pinterest_P/grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest</title>
-    <link rel="stylesheet" href="gridstyle.css">
+    <link rel="stylesheet" href="assets/css/gridstyle.css">
 </head>
 <body>
     <main>
