--- a/Pinterest_P/individual.html
+++ b/Pinterest_P/individual.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest</title>
-    <link rel="stylesheet" href="Pinterest_style.css">
+    <link rel="stylesheet" href="assets/css/Pinterest_style.css">
 </head>
 <body>
     <main>
