--- a/Individual/grid.html
+++ b/Individual/grid.html
@@ -9,7 +9,7 @@
     <main>
         <div class="contenedor">
             <div class="imagen_icono">
-                <img class="imagen" src="https://i.pinimg.com/564x/7c/ce/3f/7cce3fba8fb4bbce58e110d8acf08a95.jpg" alt="">
+                <img class="imagen" src="https://images.pexels.com/photos/11195461/pexels-photo-11195461.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
             </div>
             <div class="datos">
                 <div class="iconos">
@@ -48,6 +48,9 @@
                     </div>
                 </div>
                 <div class="guardado">
+                    <img id="user_keep" src="https://i.pinimg.com/564x/7c/ce/3f/7cce3fba8fb4bbce58e110d8acf08a95.jpg" alt="" width="30" height="30">
+                    <a id="texto7" href="#">Usuario</a>
+                    <p>ha guardado este Pin</p>
                 </div>
             </div>
         </div>
