--- a/Individual/grid.html
+++ b/Individual/grid.html
@@ -9,7 +9,7 @@
     <main>
         <div class="contenedor">
             <div class="imagen_icono">
-                <img class="imagen" src="https://images.pexels.com/photos/11195461/pexels-photo-11195461.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+                <img class="imagen" src="https://i.pinimg.com/564x/e5/ee/d1/e5eed1bdeaa9ffe7e3bbf453f0104a1c.jpg" alt="">
             </div>
             <div class="datos">
                 <div class="iconos">
